# burn

./: Cargo.toml
.github/workflows/: test.yml
crates/burn/: Cargo.toml
crates/burn-ndarray/: Cargo.toml
crates/burn-ndarray/src/: backend.rs  lib.rs  simd_dispatch.rs
crates/burn-ndarray/src/ops/: matmul.rs
crates/burn-rustynum/: Cargo.toml
crates/burn-rustynum/src/: backend.rs  lib.rs  tensor.rs
crates/burn-rustynum/src/ops/: activation.rs  bool_tensor.rs  int_tensor.rs  mod.rs  module.rs  qtensor.rs  tensor.rs  transaction.rs
docs/: RUSTYNUM_BACKEND_PLAN.md
