[package]
name = "burn-rustynum"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RustyNum AVX-512 SIMD backend for the Burn framework"
license = "Apache-2.0"

[features]
default = ["std"]
std = [
    "burn-backend/std",
    "burn-ir/std",
    "burn-std/std",
    "rand/std",
    "rand/std_rng",
    "rand/thread_rng",
    "num-traits/std",
]

[dependencies]
burn-backend = { path = "../burn-backend", version = "=0.21.0-pre.1", default-features = false }
burn-std = { path = "../burn-std", version = "=0.21.0-pre.1", default-features = false }
burn-ir = { path = "../burn-ir", version = "=0.21.0-pre.1", default-features = false }

libm = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true, default-features = false }

[dev-dependencies]
