[package]
name = "burn-rustynum"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RustyNum AVX-512 SIMD backend for the Burn framework"
license = "Apache-2.0"

[features]
default = ["std", "simd"]
std = [
    "burn-backend/std",
    "burn-ir/std",
    "burn-std/std",
    "rand/std",
    "rand/std_rng",
    "rand/thread_rng",
    "num-traits/std",
]
# Enable rustynum SIMD-accelerated kernels (AVX-512/AVX2 with scalar fallback).
# Requires nightly Rust for portable_simd. Disable for stable-only builds.
simd = ["dep:rustynum-core", "dep:rustyblas"]

[dependencies]
burn-backend = { path = "../burn-backend", version = "=0.21.0-pre.1", default-features = false }
burn-std = { path = "../burn-std", version = "=0.21.0-pre.1", default-features = false }
burn-ir = { path = "../burn-ir", version = "=0.21.0-pre.1", default-features = false }

# Rustynum SIMD acceleration (optional, nightly)
rustynum-core = { path = "../../../rustynum/rustynum-core", default-features = false, features = ["avx512"], optional = true }
rustyblas = { path = "../../../rustynum/rustyblas", default-features = false, features = ["avx512"], optional = true }

libm = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true, default-features = false }

[dev-dependencies]
